[package]
name = "actix-ws-prost"
version = "0.1.0"
authors = ["fdeantoni <fdeantoni@gmail.com>"]
edition = "2018"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/main.rs"

[dependencies]
bytes = "0.4"
prost = "0.6"

actix = "0.8.3"
actix-codec = "0.4.0"
actix-web = "1.0.8"
actix-web-actors = "1.0.2"
actix-files = "0.1.6"
awc = "0.2.7"
env_logger = "0.7"
futures = "0.1"

[build-dependencies]
prost-build = { version = "0.5.0" }
